<resources>
    <string name="app_name">MeloVibes</string>
    <string name="logoimage"></string>
    <string name="SStext">Melodies That Gives You Vibes</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="searchImageBtn"></string>
    <string name="allSongs">All Songs</string>
    <string name="recentlyAdded">Recently Added</string>
    <string name="mostPlayed">Most Played</string>
    <string name="leastPlayed">Least Played</string>
    <string name="slider_desc">slider</string>
    <string name="back_button">back button</string>
    <string name="cover_art">cover art</string>
    <string name="PREV">TODO</string>
    <string name="next">NEXT</string>
    <string name="pause">PAUSE</string>
    <string name="song_name">SONG NAME</string>
    <string name="album_name">ALBUM NAME</string>
    <string name="playing_now">Playing Now</string>
    <string name="shuffle">shuffle</string>
    <string name="repeat">repeat</string>
    <string name="title_activity_songs_page">SongsPageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>